designed flashcards UI

--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,15 @@
   margin: 1rem 2rem;
 } */
 body {
-  background-color: #180347fd;
+  background-image: url('/public/fancy-cushion.png');
+  background-color: #011320fd;
   margin: 0;
 }
 
 .container {
-  max-width: 900px;
+  max-width: 90vw;
   margin: 1rem 2rem;
+  /* background-color: aqua; */
 }
 
 .header {
@@ -62,10 +64,16 @@ body {
   box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.3);
   background-color: white;
   transform-style: preserve-3d;
-  transition: 150ms;
+  transition: 300ms;
+  z-index: 0;
   cursor: pointer;
   transform: perspective(1000px) rotateY(var(--rotate-y, 0))
     translateY(var(--translate-y, 0));
+  background: -webkit-linear-gradient(
+    -45deg,
+    rgb(255, 255, 255) 45%,
+    rgb(214, 250, 231) 0%
+  );
 }
 
 .card:hover {
@@ -79,6 +87,9 @@ body {
 
 .card .front {
   text-align: center;
+  color: rgb(0, 0, 24);
+  font-weight: 500;
+  font-size: 1.2rem;
 }
 
 .card .front,
@@ -91,4 +102,13 @@ body {
 
 .card .back {
   transform: rotateY(180deg);
+  color: rgb(4, 182, 19);
+}
+
+@media screen and (max-width: 700px) {
+  .card .front {
+    text-align: left;
+    font-weight: 400;
+    font-size: 1rem;
+  }
 }
