--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,3 @@
-/* .App {
-  margin: 1rem 2rem;
-} */
 body {
   background-image: url('/public/fancy-cushion.png');
   background-color: #011320fd;
@@ -10,6 +7,7 @@ body {
 .container {
   max-width: 90vw;
   margin: 1rem 2rem;
+  margin-top: 5rem;
   /* background-color: aqua; */
 }
 
@@ -110,5 +108,10 @@ body {
     text-align: left;
     font-weight: 400;
     font-size: 1rem;
+  }
+  .container {
+    max-width: 99vw;
+    margin: 0.5rem 1rem;
+    margin-top: 5rem;
   }
 }
