--- a/src/App.css
+++ b/src/App.css
@@ -5,51 +5,17 @@ body {
 }
 
 .container {
-  max-width: 90vw;
+  max-width: 95vw;
   margin: 1rem 2rem;
   margin-top: 5rem;
   /* background-color: aqua; */
 }
 
-.header {
+.card-grid {
   display: flex;
-  justify-content: flex-end;
   align-items: center;
   flex-wrap: wrap;
-  background-color: white;
-  padding: 0 1.5rem;
-  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.3);
-}
-
-.form-group {
-  display: flex;
-  flex-direction: column;
-  margin: 0.5rem;
-}
-
-.form-group > label {
-  color: #777;
-  font-size: 0.75rem;
-  margin-bottom: 0.25rem;
-}
-
-.btn {
-  background-color: hsl(200, 100%, 50%);
-  color: white;
-  padding: 0.5em 1em;
-  border-radius: 0.3em;
-  border: none;
-  cursor: pointer;
-}
-
-.btn:hover {
-  background-color: hsl(200, 100%, 40%);
-}
-
-.card-grid {
-  display: grid;
-  align-items: center;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  /* grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); */
   gap: 1rem;
 }
 
@@ -96,6 +62,7 @@ body {
   padding: 1rem;
   backface-visibility: hidden;
   font-size: 1.2rem;
+  transform: rotateX(0deg);
 }
 
 .card .back {
@@ -104,7 +71,7 @@ body {
   /* color: rgb(188, 184, 189); */
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 600px) {
   .card .front {
     text-align: left;
     font-weight: 400;
@@ -114,5 +81,10 @@ body {
     max-width: 99vw;
     margin: 0.5rem 1rem;
     margin-top: 7rem;
+  }
+}
+@media screen and (max-width: 1400px) {
+  .container {
+    margin-right: 5rem;
   }
 }
