--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@ body {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
+  justify-content: space-around;
   /* grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); */
   gap: 1rem;
 }
