--- a/src/App.css
+++ b/src/App.css
@@ -12,11 +12,9 @@ body {
 }
 
 .card-grid {
-  display: flex;
+  display: grid;
   align-items: center;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  /* grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); */
+  grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
   gap: 1rem;
 }
 
